<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0000000"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/label_how_to_play_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_how_to_play_1"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
        
        <TextView
            android:id="@+id/label_how_to_play_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_how_to_play_2"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/label_left_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_left_input"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:padding="10dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/label_right_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_right_input"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:padding="10dp" />
        
    </LinearLayout>

</LinearLayout>