<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4000000"
    android:gravity="center"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/label_score"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/label_best"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/img_description"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="#3CAAE6"
                android:src="@drawable/ranking" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/img_description"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="#64C864"
                android:src="@drawable/play" />
        </LinearLayout>
    </TableRow>

</TableLayout>